--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,10 +18,8 @@
         app:drawableLeftCompat="@drawable/ic_arrow_left" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_menu_item"
-        android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/padding_menu_item">
+        style="@style/SettingsMenuItemWrapperStyle"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="0dp"
@@ -39,33 +37,18 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_menu_item"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="@dimen/padding_menu_item"
+        style="@style/SettingsMenuItemStyle"
         android:text="@string/share_app"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_size_menu_item"
         app:drawableRightCompat="@drawable/ic_share" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_menu_item"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="@dimen/padding_menu_item"
+        style="@style/SettingsMenuItemStyle"
         android:text="@string/write_to_support"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_size_menu_item"
         app:drawableRightCompat="@drawable/ic_support" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_menu_item"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="@dimen/padding_menu_item"
+        style="@style/SettingsMenuItemStyle"
         android:text="@string/terms_of_use"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_size_menu_item"
         app:drawableRightCompat="@drawable/ic_arrow_right" />
 
 </LinearLayout>
