--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,10 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:drawablePadding="24dp"
+        android:fontFamily="@font/ys_display_medium"
         android:gravity="center_vertical"
         android:paddingHorizontal="20dp"
         android:text="@string/settings"
         android:textColor="@color/black"
+        android:textFontWeight="500"
         android:textSize="22sp"
         app:drawableLeftCompat="@drawable/ic_arrow_left" />
 
@@ -26,8 +28,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:fontFamily="@font/ys_display_regular"
             android:text="@string/dark_theme"
             android:textColor="@color/black"
+            android:textFontWeight="400"
             android:textSize="@dimen/font_size_menu_item" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
