--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:background">@color/black</item>
+        <item name="colorOnPrimary">@color/yp_black</item>
+        <item name="colorSecondary">@color/yp_blue</item>
+        <item name="android:textColor">@color/yp_white</item>
+        <item name="iconTint">@color/yp_white</item>
+    </style>
+    <style name="Activity.Main.Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
+        <item name="colorPrimary">@color/yp_white</item>
+        <item name="android:textColor">@color/yp_white</item>
     </style>
 </resources>
+
+
