--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black_ic">#1A1B22</color>
-    <color name="blue_bg">#3772E7</color>
+    <color name="teal_200">#004DFF</color>
+    <color name="yp_white">#FFFFFF</color>
+    <color name="yp_blue">#3772E7</color>
+    <color name="yp_blue_light">#9FBBF3</color>
+    <color name="yp_black">#1A1B22</color>
+    <color name="yp_light_gray">#E6E8EB</color>
+    <color name="yp_text_gray">#AEAFB4</color>
 </resources>
