--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,22 +10,20 @@
     <style name="SettingsMenuItemStyle" parent="@style/SettingsMenuItemWrapperStyle">
         <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">@dimen/font_size_menu_item</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
     </style>
 
-    <style name="MainButtonStyle">
+    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">22sp</item>
-        <item name="android:textColor">@color/black</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
-        <item name="backgroundTint">@color/white</item>
         <item name="iconGravity">textStart</item>
         <item name="iconPadding">8dp</item>
-        <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="textAllCaps">false</item>
     </style>
 </resources>
