--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    android:orientation="vertical"
+    android:paddingHorizontal="16dp"
+    android:visibility="visible"
+    tools:visibility="visible">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/search_header"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:drawablePadding="24dp"
+        android:fontFamily="@font/ys_display_medium"
+        android:gravity="center_vertical"
+        android:paddingHorizontal="4dp"
+        android:text="@string/search"
+        android:textFontWeight="500"
+        android:textSize="22sp"
+        app:drawableLeftCompat="@drawable/ic_arrow_left" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_bg_rounded"
+        android:orientation="horizontal"
+        android:paddingHorizontal="14dp"
+        android:paddingVertical="8dp">
+
+        <EditText
+            android:id="@+id/search_input"
+            style="@style/EditSearchStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="8dp"
+            android:hint="@string/search_input_hint"
+            android:inputType="text"
+            android:maxLines="1" />
+
+        <ImageView
+            android:id="@+id/search_clear_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/search_clear_description"
+            android:src="@drawable/ic_clear"
+            android:visibility="gone"
+            android:paddingStart="12dp"
+            />
+    </LinearLayout>
+
+</LinearLayout>
