--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,10 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="textAllCaps">false</item>
     </style>
+
+    <style name="EditSearchStyle">
+        <item name="android:textColorHint">@color/yp_text_gray</item>
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:fontFamily">ys_display_regular</item>
+    </style>
 </resources>
