--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,7 @@
         <item name="android:navigationBarColor">@color/yp_blue</item>
         <item name="android:textColor">@color/yp_white</item>
     </style>
+    <style name="Activity.Search.Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
+    </style>
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
 </resources>
