--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,31 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="16dp"
     android:visibility="visible"
     tools:visibility="visible">
-
-    <TextView
-        android:id="@+id/search_header"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:drawablePadding="24dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="4dp"
-        android:text="@string/search"
-        android:textFontWeight="500"
-        android:textSize="22sp"
-        app:drawableLeftCompat="@drawable/ic_arrow_left" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="4dp">
+
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:contentDescription="@string/btn_back_description"
+            android:padding="12dp"
+            android:src="@drawable/ic_arrow_left" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="12dp"
+            android:fontFamily="@font/ys_display_medium"
+            android:text="@string/search"
+            android:textFontWeight="500"
+            android:textSize="22sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp"
         android:background="@drawable/layout_bg_rounded"
         android:orientation="horizontal"
         android:paddingHorizontal="14dp"
@@ -42,6 +55,7 @@
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="8dp"
             android:hint="@string/search_input_hint"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:maxLines="1" />
 
@@ -52,10 +66,9 @@
             android:layout_gravity="center_vertical"
             android:background="@android:color/transparent"
             android:contentDescription="@string/search_clear_description"
-            android:src="@drawable/ic_clear"
-            android:visibility="gone"
             android:paddingStart="12dp"
-            />
+            android:src="@drawable/ic_clear"
+            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
