--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,18 +5,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/settings_header"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:drawablePadding="24dp"
-        android:fontFamily="@font/ys_display_medium"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="20dp"
-        android:text="@string/settings"
-        android:textFontWeight="500"
-        android:textSize="22sp"
-        app:drawableLeftCompat="@drawable/ic_arrow_left" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp">
+
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:contentDescription="@string/btn_back_description"
+            android:padding="12dp"
+            android:src="@drawable/ic_arrow_left" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="12dp"
+            android:fontFamily="@font/ys_display_medium"
+            android:text="@string/settings"
+            android:textFontWeight="500"
+            android:textSize="22sp" />
+    </LinearLayout>
 
     <LinearLayout
         style="@style/SettingsMenuItemWrapperStyle"
@@ -35,8 +48,7 @@
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
+            android:layout_gravity="center" />
     </LinearLayout>
 
     <TextView
