--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,7 +12,7 @@
         <item name="android:textColor">@color/yp_white</item>
     </style>
     <style name="Activity.Search.Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
-        <item name="iconTint">@color/yp_black</item>
+        <item name="iconTint">@color/yp_white</item>
     </style>
 </resources>
 
