--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -60,6 +61,7 @@
             android:maxLines="1" />
 
         <ImageView
+            style="@style/SearchCleatTintColor"
             android:id="@+id/search_clear_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,7 +70,13 @@
             android:contentDescription="@string/search_clear_description"
             android:paddingStart="12dp"
             android:src="@drawable/ic_clear"
-            android:visibility="gone" />
+            android:visibility="gone"
+            />
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_of_search_items"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
