--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="height_menu_item">61dp</dimen>
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="padding_menu_item">16dp</dimen>
+    <dimen name="corner_radius_search_item_img">2dp</dimen>
 </resources>
