--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <style name="EditSearchStyle">
         <item name="android:textColorHint">@color/yp_black</item>
         <item name="android:textColor">@color/yp_black</item>
@@ -17,4 +17,24 @@
     <style name="SearchCleatTintColor">
         <item name="tint">@color/yp_black</item>
     </style>
+
+    <style name="RefreshButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="textAllCaps">false</item>
+        <item name="backgroundTint">@color/yp_black</item>
+        <item name="android:textColor">@color/yp_white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="cornerRadius">54dp</item>
+    </style>
+
+    <style name="ConnectionErrorPlaceholder">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/yp_white</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
