--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -20,10 +20,12 @@
 
     <style name="RefreshButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="textAllCaps">false</item>
-        <item name="backgroundTint">@color/yp_black</item>
-        <item name="android:textColor">@color/yp_white</item>
+        <item name="backgroundTint">@color/yp_white</item>
+        <item name="android:textColor">@color/yp_black</item>
         <item name="android:textSize">14sp</item>
         <item name="cornerRadius">54dp</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
     <style name="ConnectionErrorPlaceholder">
