--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,4 +65,15 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="AudioPlayerInfoLabel">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/yp_text_gray</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
+    <style name="AudioPlayerInfoValue" parent="AudioPlayerInfoLabel">
+        <item name="android:textColor">@color/yp_black</item>
+    </style>
+
 </resources>
