--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/ys_display_medium"
-        android:text="Yesterday (Remastered 2009)"
+        tools:text="Yesterday (Remastered 2009)"
         android:textFontWeight="400"
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@id/artistName"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/ys_display_medium"
-        android:text="The Beatles "
+        tools:text="The Beatles"
         android:textFontWeight="400"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="0:29"
+        tools:text="0:29"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/btnPlay" />
