СПРИНТ 13. Проделана работа по улучшению.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="yp_black">#1A1B22</color>
     <color name="yp_light_gray">#E6E8EB</color>
     <color name="yp_text_gray">#AEAFB4</color>
+    <color name="round_background">#1A1B2240</color>
+    <color name="round_play_background">#FFFFFF</color>
 </resources>
