--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="padding_menu_item">16dp</dimen>
     <dimen name="corner_radius_search_item_img">2dp</dimen>
+    <dimen name="corner_radius_search_cover_img">8dp</dimen>
     <dimen name="placeholder_message_top_margin">100dp</dimen>
     <dimen name="placeholder_icon_message_padding">16dp</dimen>
 </resources>
