--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -12,24 +12,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.04" />
+        app:layout_constraintGuide_begin="24dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.96" />
+        app:layout_constraintGuide_end="24dp" />
 
     <ImageButton
         android:id="@+id/btn_back"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_left" />
+        app:srcCompat="@drawable/ic_arrow_left"
+        android:background="@null"
+        android:contentDescription="@null"
+        />
 
     <ImageView
         android:id="@+id/cover"
@@ -40,31 +43,39 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/btn_back"
+        android:contentDescription="@null"
+        />
 
     <TextView
         android:id="@+id/trackName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/ys_display_medium"
-        tools:text="Yesterday (Remastered 2009)"
+        tools:text="Yesterday (Remastered)"
         android:textFontWeight="400"
         android:textSize="22sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintBottom_toTopOf="@id/artistName"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintTop_toBottomOf="@id/cover" />
 
     <TextView
         android:id="@+id/artistName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/ys_display_medium"
         tools:text="The Beatles"
         android:textFontWeight="400"
         android:textSize="14sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
+        app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintTop_toBottomOf="@id/trackName" />
 
     <ImageButton
@@ -76,7 +87,10 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
         app:layout_constraintTop_toBottomOf="@id/artistName"
-        app:srcCompat="@drawable/add_button" />
+        app:srcCompat="@drawable/add_button"
+        android:background="@drawable/round_button"
+        android:contentDescription="@null"
+        />
 
     <ImageButton
         android:id="@+id/btnPlay"
@@ -86,27 +100,36 @@
         app:layout_constraintEnd_toStartOf="@id/btnLike"
         app:layout_constraintStart_toEndOf="@id/btnAdd"
         app:layout_constraintTop_toBottomOf="@id/artistName"
-        app:srcCompat="@drawable/play_button" />
+        app:srcCompat="@drawable/play_button"
+        android:background="@drawable/round_play_button"
+        android:contentDescription="@null"
+        />
 
     <ImageButton
         android:id="@+id/btnLike"
-        android:layout_width="51dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="54dp"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/btnPlay"
         app:layout_constraintTop_toBottomOf="@id/artistName"
-        app:srcCompat="@drawable/like_button" />
+        android:background="@drawable/round_button"
+        app:srcCompat="@drawable/like_button"
+        android:contentDescription="@null"
+        />
 
     <TextView
         android:id="@+id/currentTrackTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        tools:text="0:29"
+        android:text="@string/current_track_time_placeholder"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@id/btnPlay" />
+        app:layout_constraintTop_toBottomOf="@id/btnPlay"
+        android:textSize="14sp"
+        android:textFontWeight="500"
+        />
 
     <TextView
         android:id="@+id/trackTimeLabel"
@@ -125,10 +148,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="5:35"
+        style="@style/AudioPlayerInfoValue"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/trackTimeLabel"
-        app:layout_constraintTop_toBottomOf="@id/currentTrackTime" />
+        app:layout_constraintTop_toBottomOf="@id/currentTrackTime"
+        app:layout_constraintBaseline_toBaselineOf="@id/trackTimeLabel"
+        />
 
     <TextView
         android:id="@+id/collectionNameLabel"
@@ -146,10 +172,12 @@
         style="@style/AudioPlayerInfoValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Pink - Single"
+        tools:text="Pink - Single!"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/collectionNameLabel"
-        app:layout_constraintTop_toBottomOf="@id/trackTimeValue" />
+        app:layout_constraintTop_toBottomOf="@id/trackTimeValue"
+        app:layout_constraintBaseline_toBaselineOf="@id/collectionNameLabel"
+        />
 
     <TextView
         android:id="@+id/releaseDateLabel"
@@ -170,7 +198,9 @@
         tools:text="1965"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/releaseDateLabel"
-        app:layout_constraintTop_toBottomOf="@id/collectionNameValue" />
+        app:layout_constraintTop_toBottomOf="@id/collectionNameValue"
+        app:layout_constraintBaseline_toBaselineOf="@id/releaseDateLabel"
+        />
 
     <TextView
         android:id="@+id/primaryGenreNameLabel"
@@ -191,7 +221,9 @@
         tools:text="Rock"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/primaryGenreNameLabel"
-        app:layout_constraintTop_toBottomOf="@id/releaseDateValue" />
+        app:layout_constraintTop_toBottomOf="@id/releaseDateValue"
+        app:layout_constraintBaseline_toBaselineOf="@id/primaryGenreNameLabel"
+        />
 
     <TextView
         android:id="@+id/countryLabel"
@@ -212,5 +244,14 @@
         tools:text="Великобритания"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintStart_toEndOf="@id/countryLabel"
-        app:layout_constraintTop_toBottomOf="@id/primaryGenreNameValue" />
+        app:layout_constraintTop_toBottomOf="@id/primaryGenreNameValue"
+        app:layout_constraintBaseline_toBaselineOf="@id/countryLabel"
+        />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/collectionNameGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="collectionNameValue,collectionNameLabel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
