--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -39,4 +39,19 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="AudioPlayerInfoLabel">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/yp_text_gray</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="AudioPlayerInfoValue" parent="AudioPlayerInfoLabel">
+        <item name="android:textColor">@color/yp_white</item>
+        <item name="layout_constraintWidth_max">200dp</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
 </resources>
