--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,7 +9,6 @@
     android:visibility="visible"
     tools:visibility="visible">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -154,4 +153,14 @@
             android:layout_marginTop="24dp"
             android:text="@string/clear_search_history" />
     </LinearLayout>
+
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="140dp"
+        android:visibility="gone" />
+
 </LinearLayout>
