--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -54,4 +54,13 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="TabLayoutStyle" parent="TextAppearance.Design.Tab">
+        <item name="tabTextColor">@color/yp_white</item>
+        <item name="tabIndicatorColor">@color/yp_white</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+    </style>
 </resources>
