--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:visibility="visible"
+    tools:context=".search.ui.SearchFragment"
     tools:visibility="visible">
 
     <LinearLayout
@@ -14,22 +15,13 @@
         android:layout_height="wrap_content"
         android:padding="4dp">
 
-        <ImageButton
-            android:id="@+id/btn_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:contentDescription="@string/btn_back_description"
-            android:padding="12dp"
-            android:src="@drawable/ic_arrow_left" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="12dp"
             android:fontFamily="@font/ys_display_medium"
+            android:padding="12dp"
             android:text="@string/search"
             android:textFontWeight="500"
             android:textSize="22sp" />
