--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".settings.ui.SettingsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,16 +12,6 @@
         android:layout_height="wrap_content"
         android:padding="4dp">
 
-        <ImageButton
-            android:id="@+id/btn_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:contentDescription="@string/btn_back_description"
-            android:padding="12dp"
-            android:src="@drawable/ic_arrow_left" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +20,9 @@
             android:fontFamily="@font/ys_display_medium"
             android:text="@string/settings"
             android:textFontWeight="500"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:padding="12dp"
+            />
     </LinearLayout>
 
     <LinearLayout
