--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="round_background">#40FFFFFF</color>
     <color name="round_play_background">#1A1B22</color>
+    <color name="active_navigation_element">#3772E7</color>
+    <color name="not_active_navigation_element">#FFFFFF</color>
 </resources>
