--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="yp_text_gray">#AEAFB4</color>
     <color name="round_background">#1A1B2240</color>
     <color name="round_play_background">#FFFFFF</color>
+    <color name="active_navigation_element">#3772E7</color>
+    <color name="not_active_navigation_element">#1A1B22</color>
 </resources>
