--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black_ic">#1A1B22</color>
@@ -14,4 +14,8 @@
     <color name="round_play_background">#FFFFFF</color>
     <color name="active_navigation_element">#3772E7</color>
     <color name="not_active_navigation_element">#1A1B22</color>
+    <color name="backgroundTintSnackbar">@color/yp_black</color>
+    <color name="actionTextColorSnackbar">@color/yp_white</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#AEAFB4</color>
+    <color name="background_bottom_sheet">#FFFFFF</color>
 </resources>
