--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="android:textColor">@color/yp_black</item>
         <item name="colorSecondary">@color/yp_blue</item>
         <item name="iconTint">@color/yp_text_gray</item>
+        <item name="colorPrimary">@color/yp_blue</item>
     </style>
 
     <style name="Activity.Main.Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
